Prevent excess whitespace in opened lists

--- a/src/components/Marketplace/Sidebar/Sidebar.css
+++ b/src/components/Marketplace/Sidebar/Sidebar.css
@@ -24,7 +24,7 @@
 }
 
 .sidebar-item.active{
-  height: 100%;
+  height: max-content;
 }
 
 .sidebar-listheader{
